@@ -1,3 +1,3 @@
-usr/lib/libsystemd-daemon.so
-usr/lib/pkgconfig/libsystemd-daemon.pc
+usr/lib/*/libsystemd-daemon.so
+usr/lib/*/pkgconfig/libsystemd-daemon.pc
 usr/include/systemd/sd-daemon.h
