@@ -1,1 +1,1 @@
-lib/libsystemd-daemon.so.*
+lib/*/libsystemd-daemon.so.*
