@@ -1,4 +1,4 @@
-usr/lib/libsystemd-journal.so
-usr/lib/pkgconfig/libsystemd-journal.pc
+usr/lib/*/libsystemd-journal.so
+usr/lib/*/pkgconfig/libsystemd-journal.pc
 usr/include/systemd/sd-journal.h
 usr/include/systemd/sd-messages.h
