@@ -1,3 +1,3 @@
-usr/lib/libsystemd-login.so
-usr/lib/pkgconfig/libsystemd-login.pc
+usr/lib/*/libsystemd-login.so
+usr/lib/*/pkgconfig/libsystemd-login.pc
 usr/include/systemd/sd-login.h
