@@ -2,6 +2,7 @@ systemd (44-3) UNRELEASED; urgency=low
 
   [ Michael Biebl ]
   * Bump to debhelper 9.
+  * Convert to Multi-Arch: same where possible.  Closes: #676615
 
  -- Tollef Fog Heen <tfheen@debian.org>  Fri, 29 Jun 2012 22:34:16 +0200
 
